--- a/los.html
+++ b/los.html
@@ -4,24 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Home </title>
+    <title> Log in or Sign up </title>
     <link rel = "stylesheet" href = "style.css">
     <script src="script.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 </head>
 
     <body>
-        <div class = "header">
-            <button onclick = "window.location.href = 'login.html'">
+        <div class = "wrapper">
+            <h1> You will need an account to access the website. Would you like to:</h1>
+            <button onclick = "window.location.href = 'login.html'" div class = "btn1">
                 Log In
             </button>
-            <button onclick = "window.location.href = 'signup.html'">
+            <button onclick = "window.location.href = 'signup.html'" div class = "btn1">
                 Sign Up
             </button>
-        </div>
-
-        <div class = "wrapper1">
-                <button onclick="window.location.href = 'los.html'" type = "button"> Go to Website</button>
         </div>
     </body>
 </html>
